Fix: Add overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -1371,6 +1371,7 @@ ul {
 .product-image-wrapper {
   position: relative;
   width: 100%;
+  overflow: hidden;
   margin-bottom: var(--spacing-sm);
 }
 
@@ -1505,6 +1506,7 @@ ul {
 .about-title {
   font-size: 3rem;
   font-weight: 400;
+  width: max-content;
   /* Serif-like elegance */
   letter-spacing: 0.1em;
   color: var(--bg-white);
